Fix searchResultBufFlags & queryResultBufFlags memory leak (#11585)
Signed-off-by: shaoyue.chen <shaoyue.chen@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -91,6 +91,9 @@ proxy:
   maxDimension: 32768 # Maximum dimension of vector
   maxShardNum: 256 # Maximum number of shards in a collection
   maxTaskNum: 1024 # max task number of proxy task queue
+  bufFlagExpireTime: 3600 # second, the time to expire bufFlag from cache in collectResultLoop
+  bufFlagCleanupInterval: 600 # second, the interval to clean bufFlag cache in collectResultLoop
+
 
 # Related configuration of queryCoord, used to manage topology and load balancing for the query nodes, and handoff from growing segments to sealed segments.
 queryCoord:
