Add gc interval config
Signed-off-by: sunby <bingyi.sun@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -179,6 +179,9 @@ dataCoord:
   compaction:
     retentionDuration: 432000 # 5 days in seconds
 
+  gc:
+    interval: 3600 # 1 hour in seconds
+
 dataNode:
   port: 21124
 
