--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -168,7 +168,7 @@ dataCoord:
     serverMaxSendSize: 2147483647 # math.MaxInt32
     clientMaxRecvSize: 104857600 # 100 MB, 100 * 1024 * 1024
     clientMaxSendSize: 104857600 # 100 MB, 100 * 1024 * 1024
-  enableCompaction: false
+  enableCompaction: true
   enableGarbageCollection: false
 
   segment:
