[skip ci]Update all contributors
Signed-off-by: Xiangyu Wang <xiangyu.wang@zilliz.com>

--- a/.github/workflows/all-contributors.yaml
+++ b/.github/workflows/all-contributors.yaml
@@ -11,7 +11,7 @@ on:
     #         │  │   │ │ │
     #         │  │   │ │ │
     #         │  │   │ │ │
-    - cron:  '0 0,12 * * *'
+    - cron:  '30 * * * *'
 
 jobs:
   contributor:
