[skip ci] Update all contributor cron
Signed-off-by: Edward Zeng <jie.zeng@zilliz.com>

--- a/.github/workflows/all-contributors.yaml
+++ b/.github/workflows/all-contributors.yaml
@@ -11,7 +11,7 @@ on:
     #         │  │   │ │ │
     #         │  │   │ │ │
     #         │  │   │ │ │
-    - cron:  '50 * * * *'
+    - cron:  '0 0,12 * * *'
 
 jobs:
   contributor:
