[Skip ci] Add comments for milvus.yaml
Signed-off-by: Bennu <yunmei.li@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -28,7 +28,7 @@ etcd:
 
 # Related configuration of minio, which is responsible for data persistence for Milvus.
 minio:
-  address: localhost
+  address: localhost # Address of MinIO/S3
   port: 9000   # Port of MinIO/S3
   accessKeyID: minioadmin
   secretAccessKey: minioadmin # MinIO/S3 encryption string
