--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -43,6 +43,16 @@ pull_request_rules:
       label:
         add:
           - ci-passed
+  
+  - name: Test passed for tests scripts changed
+    conditions:
+      - base=master
+      - -files~=^(?!tests\/scripts).+
+      - "status-success=continuous-integration/jenkins/pr-merge"
+    actions:
+      label:
+        add:
+          - ci-passed
 
   - name: Test passed for go unittest code changed
     conditions:
