[skip ci] Add comments for milvus.yaml
Signed-off-by: Bennu <yunmei.li@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -34,7 +34,7 @@ minio:
   secretAccessKey: minioadmin # MinIO/S3 encryption string
   useSSL: false # Access to MinIO/S3 with SSL
   bucketName: "a-bucket" # Bucket name in MinIO/S3
-  rootPath: files
+  rootPath: files # The root path where the message is stored in MinIO/S3
 
 # Related configuration of pulsar, used to manage Milvus logs of recent mutation operations, output streaming log, and provide log publish-subscribe services.
 pulsar:
