[skip ci] Add comment for milvus.yaml
Signed-off-by: Bennu <yunmei.li@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -99,7 +99,7 @@ proxy:
 queryCoord:
   address: localhost
   port: 19531
-  autoHandoff: true
+  autoHandoff: true # Enable auto handoff
   autoBalance: true
   overloadedMemoryThresholdPercentage: 90
   balanceIntervalSeconds: 60
