--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -100,7 +100,7 @@ queryCoord:
   address: localhost
   port: 19531
   autoHandoff: true # Enable auto handoff
-  autoBalance: true
+  autoBalance: true # Enable auto balance
   overloadedMemoryThresholdPercentage: 90 # The threshold percentage that memory overload
   balanceIntervalSeconds: 60
   memoryUsageMaxDifferencePercentage: 30
