[skip ci] Add comment for milvus.yaml
Signed-off-by: Bennu <yunmei.li@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -101,7 +101,7 @@ queryCoord:
   port: 19531
   autoHandoff: true
   autoBalance: true
-  overloadedMemoryThresholdPercentage: 90
+  overloadedMemoryThresholdPercentage: 90 # The threshold percentage that memory overload
   balanceIntervalSeconds: 60
   memoryUsageMaxDifferencePercentage: 30
 
