--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -56,7 +56,7 @@ rootCoord:
   grpc:
     serverMaxRecvSize: 2147483647 # math.MaxInt32
     serverMaxSendSize: 2147483647 # math.MaxInt32
-    clientMaxRecvSize: 104857600 # 100 MB, 100 * 1024 * 1024
+    clientMaxRecvSize: 104857600 # 100 MB, Maximum data size received by the client
     clientMaxSendSize: 104857600 # 100 MB, 100 * 1024 * 1024
 
   dmlChannelNum: 256 # The number of dml channels created at system startup
