--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,6 +11,15 @@ linters-settings:
   misspell:
     locale: US
 
+  nilnil:
+    # By default, nilnil checks all returned types below.
+    checked-types:
+      - ptr
+      - func
+      - iface
+      - map
+      - chan
+
 linters:
   disable-all: true
   enable:
@@ -22,6 +31,7 @@ linters:
     - gosimple
     - gosec
     - revive
+    - nilnil
 
 issues:
   exclude-use-default: false
@@ -44,6 +54,10 @@ issues:
     - G307
     # Use of weak random number generator math/rand
     - G404
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - nilnil
   # Maximum issues count per one linter. Set to 0 to disable. Default is 50.
   max-issues-per-linter: 0
   # Maximum count of issues with the same text. Set to 0 to disable. Default is 3.
