Support C unittest profiling
Signed-off-by: yudong.cai <yudong.cai@zilliz.com>

--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -68,7 +68,9 @@ target_link_libraries(all_tests
         milvus_indexbuilder
         log
         pthread
+        gperftools
         )
 
 install(TARGETS all_tests DESTINATION unittest)
 install(TARGETS index_builder_test DESTINATION unittest)
+
