--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -57,7 +57,7 @@ rootCoord:
     serverMaxRecvSize: 2147483647 # math.MaxInt32, Maximum data size received by the server
     serverMaxSendSize: 2147483647 # math.MaxInt32
     clientMaxRecvSize: 104857600 # 100 MB, Maximum data size received by the client
-    clientMaxSendSize: 104857600 # 100 MB, 100 * 1024 * 1024
+    clientMaxSendSize: 104857600 # 100 MB, Maximum data size sent by the client
 
   dmlChannelNum: 256 # The number of dml channels created at system startup
   maxPartitionNum: 4096 # Maximum number of partitions in a collection
