Move profiler under core/thirdparty
Signed-off-by: yudong.cai <yudong.cai@zilliz.com>

--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -60,6 +60,7 @@ target_link_libraries(index_builder_test
         milvus_indexbuilder
         log
         pthread
+        gperftools
         )
 
 target_link_libraries(all_tests
