--- a/internal/core/src/segcore/CMakeLists.txt
+++ b/internal/core/src/segcore/CMakeLists.txt
@@ -44,5 +44,6 @@ target_link_libraries(milvus_segcore
         milvus_proto
         milvus_query
         milvus_utils
+#        gperftools
         )
 
